# esp32c3x4

./: .gitignore  ADD_APP2_README.md  CUSTOM_APP_DEPLOY.md  DEPLOYMENT_REPORT.md  DEPLOY_STEPS.md  IDA_README.md  IDA_eink_extraction_notes.md  IMPLEMENTATION_SUMMARY.md  README_flash_demo.md  TXT_READER_IMPLEMENTATION.md  analyze_flash.py  capture_boot.py  compile_app.ps1  create_correct_otadata.py  create_otadata.py  deploy_test_app.ps1  eink_gxepd2_ed043wc3.ino  erase_and_flash.ps1  extract_app1.py  flash_all.ps1  flash_dump_bak.bin.i64  full_check.py  ida_analyze_app0.py  ida_analyze_app0_riscv.py  ida_analyze_app1_riscv.py  partitions_with_app2.csv  search_partition_table.py  search_pins.py  search_sd_pins.py  serial_monitor.py  switch_app.ps1  test_custom_app.ps1  upload_eink_test.ps1  upload_gpio_test.ps1  verify_app.py
E-Paper_ESP32_Driver_Board_Code/: Version_CN.txt  Version_EN.txt
IDA-DeCode/: launch_app.ps1
app2_example/: CMakeLists.txt  README.md  partitions.csv
app2_example/main/: main.c
boot_selector/: CMakeLists.txt  README.md  partitions.csv
boot_selector/main/: main.c
boot_selector_arduino/: README.md  boot_selector_arduino.ino
c3x4_main_control/: .gitignore  BOUNDARY_VALIDATION_FLOWCHART.txt  CHANGELOG.md  CMakeLists.txt  COORDINATE_SYSTEM_ANALYSIS.md  DIRECT_MODE_USAGE.md  EPD_DRIVER_COMPARISON.md  EPD_INIT_FLOWCHART_IMPLEMENTATION.md  EPUB_PARSER_IMPROVEMENTS.md  EPUB_PARSING_PROCESS.md  EPUB_PRECACHE_IMPLEMENTATION.md  EPUB_STREAMING_PARSER.md  FIXES_SUMMARY.md  HANDDRAWN_UI_IMPLEMENTATION.md  IDA_FIRMWARE_ANALYSIS.md  IMPLEMENTATION_REPORT.txt  KEY_PRESS_FLOW_ANALYSIS.md  KEY_PRESS_ISSUES_AND_FIXES.md  LVGL_BUILD_SUCCESS.md  LVGL_INTEGRATION.md  LVGL_INTEGRATION_README.md  LVGL_QUICKSTART.md  MEMORY_OPTIMIZATION.md  MENU_FONT_FIX.md  PARTIAL_REFRESH_BOUNDARY_VALIDATION.md  PARTIAL_REFRESH_SUMMARY_EN.md  PIN_CONFIGURATION_SUMMARY.md  POWER_KEY_DOUBLE_CLICK_IMPLEMENTATION.md  QUICK_REFERENCE.md  READING_HISTORY_CHECKLIST.md  READING_HISTORY_GUIDE.md  READING_HISTORY_QUICKREF.md  READING_HISTORY_SUMMARY.md  README_DOCS.md  REFRESH_OPTIMIZATION_REPORT.md  REFRESH_STRATEGY.md  SCHEME3_IMPLEMENTATION.md  SCHEME3_SUMMARY.md  TEST_CHECKLIST.md  VERSION_README.md  (+13 more)
c3x4_main_control/.claude/: settings.local.json
c3x4_main_control/.joycode/: prompt.json
c3x4_main_control/GDEQ0426T82_Arduino/: Ap_29demo.h  Display_EPD_W21.cpp  Display_EPD_W21_spi.h  GDEQ0426T82_Arduino.ino
c3x4_main_control/docs/: ASYNC_PAGING_DESIGN.md  BLE_STREAMING_FIX.md  BUILTIN_CHINESE_FONT_CN.md  CHINESE_FONT_CN.md  EPD_pin_investigation.md  EPUB_PRECACHE_CHECKLIST.md  EPUB_PRECACHE_DESIGN.md  EPUB_PRECACHE_QUICKREF.md  FONT_PARTITION_GUIDE.md
c3x4_main_control/examples/: opf.txt  沉默的巡游(东野圭吾)(Z-Library).epub
c3x4_main_control/main/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  EPD_4in26.c  EPD_4in26.h  GUI_Paint.c  GUI_Paint.h  ImageData.c  hello_world_main.c  idf_component.yml  lvgl_demo.c  lvgl_demo.h  lvgl_driver.c  lvgl_driver.h  lvgl_driver_optimized.c.example  main.c  main_lvgl_example.c  power_manager.c  power_manager.h  version.h
c3x4_main_control/main/Fonts/: fonts.h  source_sans_pro_16.c
c3x4_main_control/main/lib/: .gitkeep
c3x4_main_control/main/lib/pngdec/: PNGdec.h  infback.c  inflate.c  pngdec_config.h  zconf.h  zutil.h
c3x4_main_control/main/lib/tjpgd/: tjpgdcnf.h
c3x4_main_control/main/ui/: README_字体文件.md  ble_book_protocol.c  ble_book_protocol.h  ble_cache_manager.c  ble_cache_manager_optimized.h  ble_manager.c  ble_manager.h  ble_reader_screen.c  ble_reader_screen.h  bmp_helper.c  boot_animation.c  boot_animation.h  boot_animation_frames.c  boot_animation_frames.h  boot_screen.c  boot_screen.h  builtin_chinese_font.c  builtin_chinese_font.h  chinese_font.c  chinese_font.h  chinese_font_impl.c  common_chinese_chars.txt  common_chinese_chars_full.txt  display_engine.c  display_engine.h  embedded_menu_default_font.h  epub_cache.c  epub_cache.h  epub_html.c  epub_html.h  epub_parser.c  epub_parser.h  epub_xml.c  epub_xml.h  epub_zip.c  epub_zip.h  file_browser.c  file_browser.h  file_browser_screen.c  font_cache.c  (+48 more)
c3x4_main_control/main/ui/ble/: ble_book_protocol.c  ble_cache_manager.c  ble_cache_manager.h  ble_manager.c  ble_manager.h
c3x4_main_control/main/ui/core/: display_engine.c  display_engine.h  input_handler.c  input_handler.h  paginated_menu.h  screen_manager.c  screen_manager.h  ui_region_manager.c
c3x4_main_control/main/ui/epub/: epub_html.h  epub_parser.c  epub_parser.h  epub_precache.c  epub_precache.h  epub_precache_example.c  epub_xml.cpp  epub_xml.h  epub_xml_old.c  epub_zip.c  epub_zip.h
c3x4_main_control/main/ui/fonts/: builtin_chinese_font.h  chinese_font_impl.h  embedded_menu_default_font.c  font_cache_level1_table.h  font_partition.c  font_partition.h  font_selector.c  font_selector.h  xt_eink_font.c  xt_eink_font.h  xt_eink_font_impl.c  xt_eink_font_impl.h
c3x4_main_control/main/ui/image/: bmp_helper.c  bmp_helper.h  jpeg_helper.c  jpeg_helper.h  png_helper.cpp
c3x4_main_control/main/ui/screens/: ble_reader_screen.c  ble_reader_screen.h  file_browser_screen.c  file_browser_screen.h  font_select_screen.h  home_screen.c  home_screen.h  image_viewer_screen.c  image_viewer_screen.h  reader_screen.c  reader_screen.h  reader_screen_simple.c  reader_screen_simple.h  settings_screen.c  settings_screen.h  settings_screen_simple.c  wallpaper_screen.c  wallpaper_screen.h
c3x4_main_control/main/ui/txt/: txt_reader.c  txt_reader.h
c3x4_main_control/main/ui/wallpaper/: wallpaper_manager.c  wallpaper_manager.h
c3x4_main_control/tools/: chinese_font.h  chinese_font_20.h  chinese_font_24.h  convert_gif_to_boot_frames.py  diagnose_epub.py  embed_font.py  epd_pin_test.py  flash_font_partition.py  gen_chinese_font.py  generate_ascii_font.py  generate_chinese_font.py  generate_gbk_table.py  (+4 more)
display_demo/: display_demo.ino
eink_driver_template/: eink_driver_template.ino
eink_gxepd2_gdeq0426_ssd1677/: eink_gxepd2_gdeq0426_ssd1677.ino
test_app_xteink/: test_app_xteink.ino
test_app_xteink_v2/: test_app_xteink_v2.ino
(+29 files in other folders)
